--- a/index.html
+++ b/index.html
@@ -140,7 +140,10 @@
 											   <b>JAVA Developer</b>
 											   <b>Editing Vlog</b>
 											   <b>PHP developer</b>
+											     <b>React js</b>
 
+											     <b>jQuery </b>
+											   <b>Bootstrap </b>
 											</span>
 										</h2>
 										<div class="button">
